--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "files.associations": {
         "global.h": "c",
-        "collision.h": "c"
+        "collision.h": "c",
+        "ui.h": "c",
+        "engine.h": "c"
     }
 }
